; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-parse.c_pdf_load_stream_or_string_as_utf8.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-parse.c_pdf_load_stream_or_string_as_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pdf_load_stream_or_string_as_utf8(i32* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i64 @pdf_is_stream(i32* %6, i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i8* @pdf_new_utf8_from_pdf_stream_obj(i32* %11, i32* %12)
  store i8* %13, i8** %3, align 8
  br label %18

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i8* @pdf_new_utf8_from_pdf_string_obj(i32* %15, i32* %16)
  store i8* %17, i8** %3, align 8
  br label %18

18:                                               ; preds = %14, %10
  %19 = load i8*, i8** %3, align 8
  ret i8* %19
}

declare dso_local i64 @pdf_is_stream(i32*, i32*) #1

declare dso_local i8* @pdf_new_utf8_from_pdf_stream_obj(i32*, i32*) #1

declare dso_local i8* @pdf_new_utf8_from_pdf_string_obj(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
